--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,39 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  margin: 0 20px;
 }
 
 header {
   align-self: start;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+input {
+  border-radius: 1em;
+  padding: 0.25em 0.5em;
+  border: 2px rgb(176, 255, 255) solid;
+  margin: 0 0.5em;
+}
+
+input:focus-visible {
+  border: 2px rgb(141, 241, 241) solid;
+  outline: none;
+}
+
+button {
+  padding: 0.3em 0.6em;
+  border-radius: 1em;
+  border: 2px solid rgb(176, 255, 255);
+  background-color: white;
+}
+
+button:hover {
+  background-color: rgb(229, 243, 252);
+  transition: ease 1s;
 }
 
 footer {
