--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ h1 {
   margin: 0.5em 1em;
 }
 
+h2 {
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: normal;
+}
+
 a {
   text-decoration: none;
 }
@@ -55,6 +61,36 @@ button {
 button:hover {
   background-color: rgb(229, 243, 252);
   transition: ease 1s;
+}
+
+.container {
+  background: whitesmoke;
+  width: 100vw;
+  padding: 1em 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.weather-container {
+  max-width: 900px;
+  margin: 1em auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.status {
+  text-align: center;
+}
+
+.temperature {
+  font-size: 4em;
+}
+
+.detail {
+  align-self: center;
+}
+
+.detail p {
+  margin: 0.8em;
 }
 
 footer {
