--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ button:hover {
   background: whitesmoke;
   width: 100vw;
   padding: 1em 0;
+  text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
